# Qlattice-pure-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/example-qlat-grid/: CMakeLists.txt  build-test.sh
examples/example-qlat-grid/app/: test.cpp
examples/example-qlat-grid/src/: example_utils.cpp
examples/free-propagator/: CMakeLists.txt  build-test.sh
examples/free-propagator/.cache/clangd/index/: main.cpp.C7C920882364A226.idx
examples/free-propagator/app/: main.cpp
scripts/: QUICK_START.md  README-grid-build.md  build-all.sh  build-deps.sh  build-grid-mac.sh  build-grid-neonv8.sh  build-grid-sve.sh  build.sh  download-distfiles.sh  sync-qlat.sh
